# pgn-quizzer

./: .coverage  .gitignore  README.md  pyproject.toml
jsons/: chess_sample_data.json
pgn_quizzer/: main.py
pgn_quizzer/chess_src/: data.py  presenter.py
pgn_quizzer/quiz_src/: data.py  model.py  presenter.py  view.py
src/pgn_quizzer/: __main__.py  data.py  main.py  model.py  presenter.py  view.py
tests/: conftest.py  test_data.py  test_model.py  test_presenter.py  test_view.py
tests/chess_src/: test_presenter.py
tests/quiz_src/: test_data.py  test_model.py  test_view.py
